# uqlm

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  linting.yml
assets/images/: COPYRIGHT.md
examples/: black_box_demo.ipynb  ensemble_off_the_shelf_demo.ipynb  ensemble_tuning_demo.ipynb  judges_demo.ipynb  semantic_entropy_demo.ipynb  white_box_demo.ipynb
tests/: __init__.py  test_blackboxuq.py  test_ensemble.py  test_llmjudge.py  test_llmpanel.py  test_load_example_dataset.py  test_nli.py  test_plot_model_accuracies.py  test_postprocessor.py  test_responsegenerator.py  test_semanticentropy.py  test_similarity.py  test_tuner.py  test_uncertainty.py  test_whiteboxuq.py
tests/data/scorers/: DATA_COPYRIGHT.md  blackbox_results_file.json  bsdetector_results_file.json  ensemble_results_file.json  generate_data_blackbox.py  generate_data_ensemble.py  generate_data_llmjudge.py  generate_data_semanticentropy.py  generate_data_whitebox.py  llmjudge_results_file.json  semanticentropy_results_file.json  test_data_panelquantifier.json  whitebox_results_file.json
tests/data/similarity/: generate_data_similarity.py  similarity_results_file.json
uqlm/: __init__.py
uqlm/black_box/: __init__.py  bert.py  bleurt.py  cosine.py  match.py  nli.py
uqlm/black_box/baseclass/: __init__ .py  similarity_scorer.py
uqlm/judges/: __init__.py  judge.py
uqlm/scorers/: __init__.py  black_box.py  ensemble.py  entropy.py  panel.py  white_box.py
uqlm/scorers/baseclass/: __init__.py  uncertainty.py
uqlm/utils/: __init__.py  dataloader.py  plots.py  postprocessors.py  response_generator.py  tuner.py
